k8s/components/apps/productivity/appflowy/appflowy-cloud/gotrue-strip-prefix-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: appflowy-gotrue-strip-prefix
spec:
  stripPrefix:
    prefixes:
      - /gotrue
