k8s/components/apps/productivity/appflowy/appflowy-cloud/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appflowy-cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appflowy-cloud
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: appflowy-cloud
    spec:
      containers:
        - name: appflowy-cloud
          image: appflowyinc/appflowy_cloud:0.13.3
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
      restartPolicy: Always
