k8s/components/apps/productivity/appflowy/appflowy-cloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appflowy-cloud
spec:
  selector:
    app: appflowy-cloud
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
